--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "dotenv": "^17.2.3",
     "electron": "^39.2.3",
     "next": "^16.0.3",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tsx": "^4.20.6"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
