--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-transcribe-streaming": "^3.936.0",
     "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.3",
     "electron": "^39.2.3",
+    "mongoose": "^9.0.0",
     "next": "^16.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
