--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "license": "ISC",
     "dependencies": {
         "@aws-sdk/client-transcribe-streaming": "^3.936.0",
+        "@google/genai": "^1.30.0",
         "@google/generative-ai": "^0.24.1",
         "dotenv": "^17.2.3",
         "electron": "^39.2.3",
