--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
         "@aws-sdk/client-transcribe-streaming": "^3.936.0",
         "@google/genai": "^1.30.0",
         "@google/generative-ai": "^0.24.1",
+        "@types/express": "^5.0.5",
+        "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "electron": "^39.2.3",
+        "express": "^5.1.0",
         "mongoose": "^9.0.0",
         "next": "^16.0.3",
         "react": "^19.2.0",
