--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "next": "^16.0.3",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "socket.io": "^4.8.1",
         "tsx": "^4.20.6"
     },
     "devDependencies": {
