--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Electron boilerplate with modular IPC mechanism",
     "main": "dist/main/main.js",
     "scripts": {
+        "run": "nodemon --watc \"src/**\" --ext \"ts\" --exec \"npx tsx src/server/expressMain.ts\"",
         "dev:renderer": "cd renderer && next dev",
         "dev:electron": "NODE_ENV=development electron .",
         "dev": "npm run build:main && npm run build:preload && npm run dev:renderer & npm run dev:electron",
@@ -34,6 +35,7 @@
         "express": "^5.1.0",
         "mongoose": "^9.0.0",
         "next": "^16.0.3",
+        "nodemon": "^3.1.11",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "socket.io": "^4.8.1",
